--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "1.5.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
+    "date-fns": "2.30.0",
     "houseform": "1.11.1",
     "lucide-react": "0.274.0",
     "next": "13.4.19",
