--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "react-dom": "18.2.0",
     "sharp": "0.32.5",
     "tailwind-merge": "1.14.0",
+    "viem": "1.9.5",
+    "wagmi": "1.3.11",
     "zod": "3.22.2"
   },
   "devDependencies": {
