--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "reinstall": "rm -rf node_modules yarn.lock && yarn"
   },
   "dependencies": {
+    "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "@tanstack/react-query": "4.33.0",
     "axios": "1.5.0",
