--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "@tanstack/react-query": "4.33.0",
+    "@wagmi/core": "1.3.10",
     "axios": "1.5.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
