--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,16 @@
   "dependencies": {
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
+    "@safe-global/api-kit": "1.3.0",
+    "@safe-global/protocol-kit": "1.2.0",
+    "@safe-global/safe-core-sdk-types": "2.2.0",
     "@tanstack/react-query": "4.33.0",
     "@wagmi/core": "1.3.10",
     "axios": "1.5.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "date-fns": "2.30.0",
+    "ethers": "5.7.2",
     "houseform": "1.11.1",
     "lucide-react": "0.274.0",
     "next": "13.4.19",
