--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.6",
+    "@radix-ui/react-select": "1.2.2",
     "@radix-ui/react-slot": "1.0.2",
     "@safe-global/api-kit": "1.3.0",
     "@safe-global/protocol-kit": "1.2.0",
